complete translations for toasts

--- a/translations/locales/en/sort.json
+++ b/translations/locales/en/sort.json
@@ -1,5 +1,7 @@
 {
   "id": "Number",
   "name": "Name",
-  "classId": "Class"
+  "classId": "Class",
+  "asc": "ascending",
+  "desc": "descending"
 }
