--- a/translations/locales/fr/sort.json
+++ b/translations/locales/fr/sort.json
@@ -1,5 +1,7 @@
 {
   "id": "Numéro",
   "name": "Nom",
-  "classId": "Classe"
+  "classId": "Classe",
+  "asc": "ascendant",
+  "desc": "descendant"
 }
