--- a/translations/locales/en/toast.json
+++ b/translations/locales/en/toast.json
@@ -2,13 +2,27 @@
   "success": "Success",
   "error": "Error",
 
-  "importError": "Import error",
-  "clipboardIsEmpty": "Clipboard is empty",
-  "incorrectFormat": "Incorrect format",
-  "thisSetDoesNotExist": "This set does not exist",
-  "unknownError": "Unknown error",
+  "importError": "import error",
+  "clipboardIsEmpty": "clipboard is empty",
+  "incorrectFormat": "incorrect format",
+  "thisSetDoesNotExist": "this set does not exist",
+  "unknownError": "unknown error",
 
-  "setLimitReached": "Set limit reached",
+  "setLimitReached": "set limit reached",
 
-  "theSettingsHaveBeenReset": "The settings have been reset"
+  "theSettingsHaveBeenReset": "the settings have been reset",
+  "allSavedSetsHaveBeenDeleted": "all saved sets have been deleted",
+
+  "setRenamed": "set renamed",
+  "nameAlreadyExists": "name already exists",
+  "setStatsHaveBeenLoaded": "set stats have been loaded",
+  "setHasBeenLoadedInTheComparator": "set have been loaded in the comparator",
+  "setHasBeenSaved": "set has been saved",
+  "setHasBeenUnSaved": "set has been unsaved",
+  "setHasBeenDeleted": "set hase been deleted",
+  "setCopiedInClipboard": "set copied in clipboard",
+  "setImported": "set imported",
+  "statsImported": "set's stats imported",
+  "setLimitReachedInThisScreen": "set limit reached",
+  "cannotGenerateUniqueName": "cannot generate new name"
 }
