--- a/translations/locales/en/modal.json
+++ b/translations/locales/en/modal.json
@@ -7,6 +7,8 @@
 
   "loadASavedSet": "Load a saved set",
 
+  "guideSetBuilder": "Set Builder guide",
+
   "numberOfSearchResults": "Number of search results",
   "defaultDisplayedStats": "Default displayed stats in sets",
   "licenses": "Licenses"
