change screen names

--- a/translations/locales/en/helpSearch.json
+++ b/translations/locales/en/helpSearch.json
@@ -2,7 +2,7 @@
   "Pick the stats you want": "Pick the stats you want",
   ", and let the algorithm find the perfect sets for you.": ", and let the algorithm find the perfect sets for you.",
 
-  "How to use the Set Builder": "How to use the Set Builder",
+  "How to use the Build finder": "How to use the Build finder",
   "Choose your criteria": "Choose your criteria",
   "Add/remove a statistic": "Add/remove a statistic",
   "Adjust values and tolerance": "Adjust values and tolerance",
