--- a/translations/locales/en/modal.json
+++ b/translations/locales/en/modal.json
@@ -7,7 +7,7 @@
 
   "loadASavedSet": "Load a saved set",
 
-  "guideSetBuilder": "Set Builder guide",
+  "guideSetBuilder": "Build finder guide",
 
   "numberOfSearchResults": "Number of search results",
   "defaultDisplayedStats": "Default displayed stats in sets",
