--- a/translations/locales/fr/helpSearch.json
+++ b/translations/locales/fr/helpSearch.json
@@ -2,7 +2,7 @@
   "Pick the stats you want": "Sélectionnez vos statistiques",
   ", and let the algorithm find the perfect sets for you.": ", et laissez l'algorithme dénicher pour vous les meilleurs sets.",
 
-  "How to use the Set Builder": "Comment utiliser\nle Set Builder",
+  "How to use the Build finder": "Comment utiliser\nle Chercheur de builds",
   "Choose your criteria": "Choisissez vos critères",
   "Add/remove a statistic": "Ajoutez/supprimez une statistique",
   "Adjust values and tolerance": "Ajustez les valeurs et la tolérance",
