--- a/translations/locales/fr/modal.json
+++ b/translations/locales/fr/modal.json
@@ -7,7 +7,7 @@
 
   "loadASavedSet": "Charger un set enregistré",
 
-  "guideSetBuilder": "Guide du Set Builder",
+  "guideSetBuilder": "Guide du Chercheur de builds",
 
   "numberOfSearchResults": "Nombre de résultats de recherche",
   "defaultDisplayedStats": "Stats affichées par défault dans les sets",
