add "theme" translation

--- a/translations/locales/en/modal.json
+++ b/translations/locales/en/modal.json
@@ -2,6 +2,7 @@
   "filters": "Filters",
   "selectASet": "Select a set",
 
+  "desiredStatsAndStatsInSets": "Desired stats and displayed stats in sets",
   "displayedStatsInSets": "Displayed stats in sets",
   "displayedStats": "Displayed stats",
 
