--- a/translations/locales/fr/modal.json
+++ b/translations/locales/fr/modal.json
@@ -2,6 +2,7 @@
   "filters": "Filtres",
   "selectASet": "Selectionner un set",
 
+  "desiredStatsAndStatsInSets": "Stats desirées et stats affichées dans les sets",
   "displayedStatsInSets": "Stats affichées dans les sets",
   "displayedStats": "Stats affichées",
 
