--- a/translations/locales/en/toast.json
+++ b/translations/locales/en/toast.json
@@ -5,24 +5,24 @@
   "importError": "import error",
   "clipboardIsEmpty": "clipboard is empty",
   "incorrectFormat": "incorrect format",
-  "thisSetDoesNotExist": "this set does not exist",
+  "thisSetDoesNotExist": "this build does not exist",
   "unknownError": "unknown error",
 
-  "setLimitReached": "set limit reached",
+  "setLimitReached": "build limit reached",
 
   "theSettingsHaveBeenReset": "the settings have been reset",
   "allSavedSetsHaveBeenDeleted": "all saved sets have been deleted",
 
-  "setRenamed": "set renamed",
+  "setRenamed": "build renamed",
   "nameAlreadyExists": "name already exists",
-  "setStatsHaveBeenLoaded": "set stats have been loaded",
-  "setHasBeenLoadedInTheComparator": "set have been loaded in the comparator",
-  "setHasBeenSaved": "set has been saved",
-  "setHasBeenUnSaved": "set has been unsaved",
-  "setHasBeenDeleted": "set hase been deleted",
-  "setCopiedInClipboard": "set copied in clipboard",
-  "setImported": "set imported",
-  "statsImported": "set's stats imported",
-  "setLimitReachedInThisScreen": "set limit reached",
+  "setStatsHaveBeenLoaded": "build stats have been loaded",
+  "setHasBeenLoadedInTheComparator": "build have been loaded in the comparator",
+  "setHasBeenSaved": "build has been saved",
+  "setHasBeenUnSaved": "build has been unsaved",
+  "setHasBeenDeleted": "build hase been deleted",
+  "setCopiedInClipboard": "build copied in clipboard",
+  "setImported": "build imported",
+  "statsImported": "build's stats imported",
+  "setLimitReachedInThisScreen": "build limit reached",
   "cannotGenerateUniqueName": "cannot generate new name"
 }
