--- a/translations/locales/fr/placeholder.json
+++ b/translations/locales/fr/placeholder.json
@@ -1,8 +1,8 @@
 {
-  "searchEmpty": "Recherchez le set de vos rêves",
-  "searchNotFound": "Aucun set trouvé correspondant à ces stats",
+  "searchEmpty": "Recherchez le buildldldldldld de vos rêves",
+  "searchNotFound": "Aucun buildld trouvé correspondant à ces stats",
   "savedEmpty": "Retrouvez vos sets favoris ici",
-  "noSetFound": "Aucun set trouvé...",
+  "noSetFound": "Aucun build trouvé...",
   "yourFavoriteSetsWillAppearHere": "Vos sets favoris apparaîtrons ici",
   "none": "Aucun"
 }
