--- a/translations/locales/fr/toast.json
+++ b/translations/locales/fr/toast.json
@@ -5,7 +5,7 @@
   "importError": "erreur d'importation",
   "clipboardIsEmpty": "presse-papiers vide",
   "incorrectFormat": "format incorrect",
-  "thisSetDoesNotExist": "ce set n'existe pas",
+  "thisSetDoesNotExist": "ce build n'existe pas",
   "unknownError": "erreur inconnue",
 
   "setLimitReached": "limite de sets atteinte",
@@ -13,16 +13,16 @@
   "theSettingsHaveBeenReset": "les préférences ont été réinitialisées",
   "allSavedSetsHaveBeenDeleted": "tous les sets sauvegardés ont été supprimés !",
 
-  "setRenamed": "set renommé",
+  "setRenamed": "build renommé",
   "nameAlreadyExists": "ce nom existe déjà",
-  "setStatsHaveBeenLoaded": "les stats du set ont été chargées",
-  "setHasBeenLoadedInTheComparator": "le set a été chargé dans le comparateur",
-  "setHasBeenSaved": "le set a été enregistré",
-  "setHasBeenUnSaved": "le set a été retiré des favoris",
-  "setHasBeenDeleted": "le set a été supprimé",
-  "setCopiedInClipboard": "set copié dans le presse-papier",
-  "setImported": "set importé",
-  "statsImported": "stats du set importées",
+  "setStatsHaveBeenLoaded": "les stats du build ont été chargées",
+  "setHasBeenLoadedInTheComparator": "le build a été chargé dans le comparateur",
+  "setHasBeenSaved": "le build a été enregistré",
+  "setHasBeenUnSaved": "le build a été retiré des favoris",
+  "setHasBeenDeleted": "le build a été supprimé",
+  "setCopiedInClipboard": "build copié dans le presse-papier",
+  "setImported": "build importé",
+  "statsImported": "stats du build importées",
   "setLimitReachedInThisScreen": "limite de sets atteinte",
   "cannotGenerateUniqueName": "impossible de générer un nouveau nom"
 }
