--- a/translations/locales/en/tooltip.json
+++ b/translations/locales/en/tooltip.json
@@ -6,11 +6,11 @@
   "developSets": "Develop sets",
   "reduceSets": "Reduce sets",
 
-  "loadStatsOfASet": "Load a set's stats",
-  "loadASet": "Load a set",
-  "importACopiedSet": "Import a copied set",
+  "loadStatsOfASet": "Load a build's stats",
+  "loadASet": "Load a build",
+  "importACopiedSet": "Import a copied build",
 
-  "addASet": "Add a set",
+  "addASet": "Add a build",
 
   "changeCondition": "Fix a condition",
 
@@ -23,9 +23,9 @@
   "edit": "Edit",
   "save": "Save",
   "loadTheStats": "Load the stats",
-  "loadTheSet": "Load the set",
+  "loadTheSet": "Load the build",
   "loadTheStatsToSearchScreen": "Load the stats to search screen",
-  "loadTheSetToDisplayScreen": "Load the set to compare screen",
+  "loadTheSetToDisplayScreen": "Load the build to compare screen",
   "copy": "Copy",
   "moreActions": "More actions"
 }
