--- a/translations/locales/fr/modal.json
+++ b/translations/locales/fr/modal.json
@@ -1,12 +1,12 @@
 {
   "filters": "Filtres",
-  "selectASet": "Selectionner un set",
+  "selectASet": "Selectionner un buildldld",
 
   "desiredStatsAndStatsInSets": "Stats desirées et stats affichées dans les sets",
   "displayedStatsInSets": "Stats affichées dans les sets",
   "displayedStats": "Stats affichées",
 
-  "loadASavedSet": "Charger un set enregistré",
+  "loadASavedSet": "Charger un buildld enregistré",
 
   "guideBuildFinder": "Guide du Chercheur de builds",
   "guideBuildComparator": "Guide du Comparateur de builds",
